Bug 508908. Disable windowed plugins in popup windows, since they don't work. r=dbaron

--HG--
extra : rebase_source : 1acfac3d3613d332586fade393f2911552bd03e0