layout/generic/nsGfxScrollFrame.cpp
@@ -79,6 +79,7 @@
 #endif
 #include "nsDisplayList.h"
 #include "nsBidiUtils.h"
+#include "nsFrameManager.h"
 
 //----------------------------------------------------------------------
 
@@ -1815,8 +1816,15 @@ nsGfxScrollFrameInner::ViewPositionDidChange(nsIScrollableView* aScrollable,
   nsPoint childOffset = mScrolledFrame->GetView()->GetOffsetTo(mOuter->GetView());
   mScrolledFrame->SetPosition(childOffset);
 
-  mOuter->PresContext()->RootPresContext()->
-    GetPluginGeometryUpdates(mOuter, aConfigurations);
+  nsRootPresContext* rootPresContext = mOuter->PresContext()->RootPresContext();
+  // Only update plugin geometry if we're scrolling in the root widget.
+  // In particular if we're scrolling inside a popup widget, we don't
+  // want to update plugins since they don't belong to this widget (we
+  // don't display windowed plugins in popups).
+  if (mOuter->GetWindow() ==
+      rootPresContext->FrameManager()->GetRootFrame()->GetWindow()) {
+    rootPresContext->GetPluginGeometryUpdates(mOuter, aConfigurations);
+  }
 }
 
 /**
